[gd_scene load_steps=18 format=3 uid="uid://c4b4g1c6sb38f"]

[ext_resource type="Script" path="res://Resources/in_sub.gd" id="1_rvvtt"]
[ext_resource type="Texture2D" uid="uid://bv1sychot5j0n" path="res://Assets/Submarine.png" id="1_sy4wd"]
[ext_resource type="Script" path="res://Resources/playerInSub.gd" id="3_bl5k1"]
[ext_resource type="Texture2D" uid="uid://b8wqu6oxc3yr1" path="res://icon.png" id="3_jxoxj"]
[ext_resource type="Script" path="res://Resources/computer.gd" id="5_mtwcc"]
[ext_resource type="Texture2D" uid="uid://wor1ls1tdsyj" path="res://Assets/Computer.png" id="6_bccuj"]
[ext_resource type="PackedScene" uid="uid://cih35chtctqow" path="res://Resources/terminal.tscn" id="7_ct11q"]
[ext_resource type="Script" path="res://Resources/ComputerRadar.gd" id="8_nwwsh"]
[ext_resource type="Texture2D" uid="uid://c2u42jywvw21w" path="res://Assets/Radar.png" id="9_rf0nd"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_617o8"]
polygon = PackedVector2Array(-98, 15, -84, 30, -84, 61, -81, 64, 65, 64, 113, 16, 113, -31, 110, -34, -95, -34, -98, -31, -98, 15, -99, 15, -99, -35, 114, -35, 113, 66, -86, 66, -99, 15)

[sub_resource type="Gradient" id="Gradient_dff4g"]
offsets = PackedFloat32Array(0, 0.535294)
colors = PackedColorArray(1, 1, 1, 0.376471, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0n461"]
gradient = SubResource("Gradient_dff4g")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kscxx"]
size = Vector2(10, 45.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rb1px"]
size = Vector2(5.33334, 30.3333)

[sub_resource type="CircleShape2D" id="CircleShape2D_v3yfv"]
radius = 5.0111

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71pb6"]
size = Vector2(16.3333, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vqtb"]
size = Vector2(13.3333, 20)

[node name="InSub" type="Node2D"]
scale = Vector2(6, 6)
script = ExtResource("1_rvvtt")
metadata/_edit_lock_ = true

[node name="Lights" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Polygon2D" type="Polygon2D" parent="Lights"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-425, -193, 364, -218, 347, 196, -414, 213)
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Lights"]
occluder = SubResource("OccluderPolygon2D_617o8")
metadata/_edit_lock_ = true

[node name="Light0" type="PointLight2D" parent="Lights"]
position = Vector2(-60.4, -6.8)
scale = Vector2(1.03906, 1.10018)
energy = 2.3
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_0n461")
texture_scale = 2.0
metadata/_edit_lock_ = true

[node name="Light1" type="PointLight2D" parent="Lights"]
position = Vector2(0.799999, -12.8)
scale = Vector2(0.851563, 0.901654)
energy = 2.3
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_0n461")
texture_scale = 2.0
metadata/_edit_lock_ = true

[node name="Light2" type="PointLight2D" parent="Lights"]
position = Vector2(70, -14)
scale = Vector2(0.978516, 0.980239)
energy = 2.3
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_0n461")
texture_scale = 2.0
metadata/_edit_lock_ = true

[node name="Light3" type="PointLight2D" parent="Lights"]
position = Vector2(51.8, 27)
scale = Vector2(0.925781, 0.980239)
energy = 2.3
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_0n461")
texture_scale = 2.0
metadata/_edit_lock_ = true

[node name="Light4" type="PointLight2D" parent="Lights"]
position = Vector2(-45.1667, 37.1667)
scale = Vector2(0.925781, 0.980239)
energy = 2.3
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_0n461")
texture_scale = 2.0
metadata/_edit_lock_ = true

[node name="Light5" type="PointLight2D" parent="Lights"]
position = Vector2(1.6, 35.4)
scale = Vector2(0.925781, 0.980239)
energy = 2.3
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_0n461")
texture_scale = 2.0
metadata/_edit_lock_ = true

[node name="CanvasModulate" type="CanvasModulate" parent="Lights"]
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Submarine" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_sy4wd")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(7.16667, 12)
zoom = Vector2(1.2, 1.2)
metadata/_edit_lock_ = true

[node name="Collisions" type="Node2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="Collision" type="StaticBody2D" parent="Collisions"]
collision_layer = 2
metadata/_edit_lock_ = true

[node name="Hitbox" type="CollisionPolygon2D" parent="Collisions/Collision"]
polygon = PackedVector2Array(113, 17, 108, 14, 47, 14, 47, 16, 63, 16, 63, 59, -79, 59, -79, 16, -74, 16, -18, 16, -18, 43.3333, -16, 43.3333, -16.03, 16, 31, 16, 31, 14, -74, 14, -93, 14, -93, -29, -50, -29, -50, -7.16667, -48, -7.16667, -48, -29, 15, -29, 15, -6.83333, 17, -7, 17, -29, 108, -29, 108, 14, 113, 17, 112, -34, -98, -34, -98, 64, 66, 64)
metadata/_edit_lock_ = true

[node name="Ladder" type="Node2D" parent="Collisions"]
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Collisions/Ladder"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/Ladder/Area2D"]
position = Vector2(38.5, 36)
shape = SubResource("RectangleShape2D_kscxx")

[node name="ExitArea" type="Area2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2(-77, 43.6667)
shape = SubResource("RectangleShape2D_rb1px")
metadata/_edit_lock_ = true

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(-36.3333, 6.66667)
collision_mask = 2
script = ExtResource("3_bl5k1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-0.166667, -1.43051e-06)
shape = SubResource("CircleShape2D_v3yfv")
metadata/_edit_lock_ = true

[node name="Icon" type="Sprite2D" parent="Player"]
position = Vector2(-0.166667, -0.166667)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_jxoxj")
metadata/_edit_lock_ = true

[node name="Furniture" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Computer" type="Node2D" parent="Furniture"]
script = ExtResource("5_mtwcc")
metadata/_edit_lock_ = true

[node name="Computer" type="Sprite2D" parent="Furniture/Computer"]
position = Vector2(-80.1667, 1.16667)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_bccuj")

[node name="Area2D" type="Area2D" parent="Furniture/Computer"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Furniture/Computer/Area2D"]
visible = false
position = Vector2(-83.6667, 2.33333)
shape = SubResource("RectangleShape2D_71pb6")

[node name="CanvasLayer" type="CanvasLayer" parent="Furniture/Computer"]

[node name="Terminal" parent="Furniture/Computer/CanvasLayer" instance=ExtResource("7_ct11q")]
visible = false

[node name="Radar" type="Node2D" parent="Furniture"]
script = ExtResource("8_nwwsh")

[node name="Radar" type="Sprite2D" parent="Furniture/Radar"]
position = Vector2(-56.5, 6.66667)
scale = Vector2(0.12, 0.12)
texture = ExtResource("9_rf0nd")

[node name="Area2D" type="Area2D" parent="Furniture/Radar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Furniture/Radar/Area2D"]
position = Vector2(-55.3333, 3.5)
shape = SubResource("RectangleShape2D_8vqtb")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = -90.5
offset_top = -0.499999
offset_right = 16.5
offset_bottom = 58.5
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 20
text = "enter open
esc close"

[connection signal="body_entered" from="ExitArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="ExitArea" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Furniture/Computer/Area2D" to="Furniture/Computer" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Furniture/Computer/Area2D" to="Furniture/Computer" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Furniture/Radar/Area2D" to="Furniture/Radar" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Furniture/Radar/Area2D" to="Furniture/Radar" method="_on_area_2d_body_exited"]
